+ Created a MenuBar with working functions // Needs to be cleaned and documented